class TokenNotFoundException(Exception):
    pass


class InvalidMovementException(Exception):
    pass


class FrameWithoutAlphaException(Exception):
    pass
