
class Characteristic:
    pass
