from src.char.characteristic import Characteristic


class Defense(Characteristic):
    pass