from src.char.characteristic import Characteristic


class Skill(Characteristic):
    pass