import shutil
from abc import ABC
from io import BytesIO
from os import makedirs, path
from typing import Tuple, Dict, Optional

import requests
from PIL import Image, ImageFont, ImageDraw

from src.char import Character
from src.image.image_processor import ImageProcessor, IMAGE_CACHE_DIR
from src.image.player_token import Token

BACKGROUND_FILENAME = '/background.png'
BACKGROUND_GRIDDED_FILENAME = '/background_gridded.png'

MODE_RGBA = 'RGBA'


class PlaymatImageProcessor(ImageProcessor, ABC):

    def __init__(self, server_id: str, image_url: Optional[str] = None, offset_pixels: Optional[Tuple[int, int]] = None,
                 square_size: Optional[int] = None):
        super().__init__(server_id, image_url, square_size)
        self._offset_pixels = offset_pixels
        self.erase_cache()
        self._map_size = self._get_image_size()
        self._crop_box = (0, 0) + self._map_size
        self._zoom = 1.0
        self._text_color = (0xff, 0xff, 0xff, 0xff)

    @property
    def size(self):
        return self._map_size

    def _get_background(self, overwrite=False) -> Image:
        cache_image_path = IMAGE_CACHE_DIR + self._server_id + BACKGROUND_FILENAME
        if not overwrite and path.exists(cache_image_path):
            return Image.open(cache_image_path)
        response = requests.get(self._image_url)
        img = Image.open(BytesIO(response.content))
        if img.mode != MODE_RGBA:
            img = img.convert(mode=MODE_RGBA)
        img.save(cache_image_path, quality=85, optimize=True)
        return img

    def get_image(self) -> Image:
        cache_image_path = IMAGE_CACHE_DIR + self._server_id + BACKGROUND_GRIDDED_FILENAME
        if path.exists(cache_image_path):
            return Image.open(cache_image_path)
        img = self._get_background()

        if img.mode != MODE_RGBA:
            img = img.convert(mode=MODE_RGBA)

        size_x, size_y = self._map_size
        offset_x, offset_y = self._offset_pixels

        draw = ImageDraw.Draw(img)

        font = ImageFont.truetype('image/files/FreeMonoBold.ttf', int(self._square_size / 2))

        for x in range(size_x):
            for y in range(size_y):
                top_left_corner = (offset_x + (x * self._square_size), offset_x + (y * self._square_size))
                bottom_right_corner = (top_left_corner[0] + self._square_size, top_left_corner[1] + self._square_size)
                if y == 0:
                    draw.text(
                        (
                            top_left_corner[0] + int(self._square_size / 4),
                            offset_x + int(self._square_size / 4)
                        ),
                        str(x),
                        fill=self._text_color,
                        font=font
                    )
                elif x == 0:
                    draw.text(
                        (
                            offset_x + int(self._square_size / 4),
                            top_left_corner[1] + int(self._square_size / 4)
                        ),
                        str(y),
                        fill=self._text_color,
                        font=font
                    )
                draw.rectangle((top_left_corner, bottom_right_corner), outline=(0, 0, 0, 255))

        img.save(cache_image_path, quality=85, optimize=True)
        return img

    def _get_image_size(self):
        img = self._get_background()
        size_x = int((img.size[0] - self._offset_pixels[0]) / self._square_size)
        size_y = int((img.size[1] - self._offset_pixels[1]) / self._square_size)
        return size_x, size_y

    def get_map_with_tokens(self, characters: Dict[str, Character]):
        img = self.get_image()

        size_x, size_y = self._map_size

        for x in range(size_x):
            for y in range(size_y):
                for char in characters.values():
                    if char.token.position == (x, y):
                        offset_x, offset_y = self._offset_pixels
                        img.alpha_composite(
                            char.token.get_image(),
                            (offset_x + (x * self._square_size), offset_y + (y * self._square_size))
                        )
        image_bytes = BytesIO()
        img.save(image_bytes, quality=85, optimize=True, format='PNG')
        image_bytes.seek(0)
        return image_bytes

